# crawl4ai-mcp-server

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  API_KEY_ERROR_GUIDE.md  CHANGELOG.md  CHERRY_STUDIO_INTEGRATION.md  Dockerfile  GOOGLE_API_ENABLE_GUIDE.md  GOOGLE_API_SEARCH_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  PROJ_INFO_4AI.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  VSCODE_INTEGRATION.md  activate.bat  config.example.json  config_demo.json  docker-compose.yml  dual_engine_test_results.json  google_api_search_results.json  llm_search_results.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_tests.ps1  search_google_api_detailed.py  search_google_api_guide.py  setup.bat  setup.ps1  smithery.yaml  test_content_output.md  test_google_api_direct.py  test_results.json  test_search_llm.py  (+2 more)
docker/: Dockerfile  crawl4ai-mcp.service  docker-compose.yml  entrypoint.sh  healthcheck.sh
docs/: API_KEY_ERROR_GUIDE.md  BEFORE_AFTER_COMPARISON.md  BRAVE_SEARCH_INTEGRATION.md  CACHE_GUIDE.md  CHERRY_STUDIO_INTEGRATION.md  CONCURRENT_SEARCH_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  FREE_SEARCH_ENGINES.md  GOOGLE_API_ENABLE_GUIDE.md  GOOGLE_API_SEARCH_SUMMARY.md  GOOGLE_API_SETUP_CN.md  HTTP_BRIDGE_USAGE.md  LICENSE  PHASE2_FEATURES.md  PROJ_INFO_4AI.md  QUICK_START.md  README.md  RETRIEVAL_EVAL.md  SEARXNG_INTEGRATION.md  SECURITY.md  SETUP_COMPLETE.md  TEST_RESULTS.md  TEST_RESULTS_v0.5.2.md  TOOL_CONSOLIDATION_v0.5.3.md  VSCODE_INTEGRATION.md  WINDOWS_INSTALLATION.md  WINDOWS_QUICK_START.md  (+2 more)
(+71 files in other folders)
